hphp/hack/test/typecheck/tconst/unassigned_tconst.php.exp
File "unassigned_tconst.php", line 4, characters 14-17:
This type constant is not declared as abstract, it must have an assigned type (NastCheck[3026])
