hphp/hack/test/typecheck/tconst/unassigned_tconst.php
<?hh // strict

class C {
  const type test;
}
